--- a/app/src/main/res/layout/activity_news_screen.xml
+++ b/app/src/main/res/layout/activity_news_screen.xml
@@ -9,17 +9,34 @@
     tools:layout_editor_absoluteX="0dp">
 
     <TextView
-        android:id="@+id/NewsScreenTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="News Screen"
-        android:textSize="36sp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="146dp"
-        tools:layout_constraintLeft_creator="1"
+        android:id="@+id/TextView"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_weight=".01"
+        android:text="News"
+        android:textAlignment="center"
+
+        android:textSize="35dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <WebView
+        android:layout_width="378dp"
+        android:layout_height="517dp"
+        android:layout_weight="1"
+        android:id="@+id/webview"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
