--- a/app/src/main/res/layout/activity_radio_screen.xml
+++ b/app/src/main/res/layout/activity_radio_screen.xml
@@ -26,20 +26,20 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:srcCompat="@mipmap/ic_launcher"
-        android:layout_marginStart="14dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="7dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/song"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="7dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp" />
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp" />
 
     <RatingBar
         android:id="@+id/ratingBar"
@@ -51,7 +51,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/albumArt"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="3dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
@@ -59,26 +59,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Artist Name"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="1dp"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         app:layout_constraintTop_toBottomOf="@+id/song"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/song"
+        android:layout_marginLeft="1dp" />
 
     <TextView
         android:id="@+id/song"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Song Name"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="15dp"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/MuteToggleButton"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="231dp"
-        app:layout_constraintLeft_toLeftOf="@+id/albumArt"
-        android:layout_marginLeft="1dp" />
+        android:layout_marginBottom="60dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="15dp" />
 
     <TextView
         android:id="@+id/album"
@@ -98,39 +98,82 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_media_play"
-        android:layout_marginStart="16dp"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="11dp"
-        app:layout_constraintTop_toBottomOf="@+id/album"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
-
-    <SeekBar
-        android:id="@+id/VolumeBar"
-        android:layout_width="220dp"
-        android:layout_height="19dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/MuteToggleButton"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/AlarmButton"
+        app:layout_constraintRight_toRightOf="@+id/MuteToggleButton"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/MuteToggleButton" />
+        app:layout_constraintLeft_toLeftOf="@+id/MuteToggleButton"
+        app:layout_constraintTop_toTopOf="@+id/AlarmButton" />
+
+    <SeekBar
+        android:id="@+id/VolumeBar"
+        android:layout_width="0dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="10dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/NewsButton"
+        android:layout_marginEnd="6dp"
+        app:layout_constraintRight_toRightOf="@+id/NewsButton"
+        android:layout_marginTop="75dp"
+        app:layout_constraintTop_toBottomOf="@+id/song"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="75dp"
+        app:layout_constraintLeft_toRightOf="@+id/MuteToggleButton"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="6dp" />
 
     <ImageButton
         android:id="@+id/MuteToggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
-        android:layout_marginStart="5dp"
-        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="16dp"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/PlayButton"
+        app:layout_constraintBottom_toTopOf="@+id/PlayButton"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
+
+    <ImageButton
+        android:id="@+id/PauseButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        app:srcCompat="@android:drawable/ic_media_pause"
+        tools:layout_constraintTop_creator="1"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintTop_toTopOf="@+id/PlayButton"
-        app:layout_constraintLeft_toRightOf="@+id/VolumeBar"
-        android:layout_marginLeft="5dp" />
+        app:layout_constraintLeft_toRightOf="@+id/PlayButton"
+        android:layout_marginLeft="15dp" />
+
+    <ImageButton
+        android:id="@+id/NewsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_dvr_white"
+        android:layout_marginEnd="16dp"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="59dp"
+        android:layout_marginRight="16dp" />
+
+    <ImageButton
+        android:id="@+id/AlarmButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_alarm_white"
+        android:layout_marginEnd="13dp"
+        app:layout_constraintRight_toLeftOf="@+id/NewsButton"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintTop_toTopOf="@+id/NewsButton"
+        android:layout_marginRight="13dp" />
 
 </android.support.constraint.ConstraintLayout>
