--- a/app/src/main/res/layout/activity_alarm_screen.xml
+++ b/app/src/main/res/layout/activity_alarm_screen.xml
@@ -12,48 +12,67 @@
         android:id="@+id/AlarmScreenTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Alarms"
+        android:text="Alarm"
         android:textSize="36sp"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/timePicker"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TimePicker
+        android:id="@+id/timePicker"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="19dp"
+        app:layout_constraintBottom_toBottomOf="@+id/SetButton"
+        android:layout_marginEnd="19dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="59dp"
         tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="55dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/newAlarmButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:clickable="true"
-        android:tint="@android:color/background_light"
-        app:backgroundTint="@android:color/holo_green_light"
-        app:elevation="0dp"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_input_add"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
+    <Button
+        android:id="@+id/SetButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="108dp"
+        android:layout_marginStart="16dp"
+        android:text="Turn On"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1" />
+
+    <Button
+        android:id="@+id/OffButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Turn Off"
+        android:layout_marginEnd="16dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@+id/timePicker" />
 
-    <LinearLayout
-        android:layout_width="370dp"
-        android:layout_height="490dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteY="69dp"
-        tools:layout_editor_absoluteX="8dp">
-
-        <ListView
-            android:id="@+id/alarmListView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:footerDividersEnabled="true"
-            android:headerDividersEnabled="true"
-            android:visibility="visible" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/updateText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Alarm Off"
+        android:textSize="36sp"
+        app:layout_constraintRight_toLeftOf="@+id/OffButton"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginEnd="9dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/OffButton" />
 
 </android.support.constraint.ConstraintLayout>
