--- a/app/src/main/res/layout/activity_radio_screen.xml
+++ b/app/src/main/res/layout/activity_radio_screen.xml
@@ -8,38 +8,22 @@
     tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp">
 
-    <TextView
-        android:id="@+id/RadioScreenTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Radio Screen"
-        android:textSize="36sp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/albumArt"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:srcCompat="@mipmap/ic_launcher"
-        android:layout_marginStart="7dp"
-        android:layout_marginEnd="7dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/song"
+        app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="5dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="7dp"
-        android:layout_marginRight="7dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RatingBar
         android:id="@+id/ratingBar"
@@ -48,10 +32,10 @@
         android:progressTint="@color/colorAccent"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/albumArt"
+        app:layout_constraintBottom_toTopOf="@+id/song"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="11dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
@@ -61,11 +45,10 @@
         android:text="Artist Name"
         android:layout_marginStart="1dp"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/song"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/song"
-        android:layout_marginLeft="1dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/song" />
 
     <TextView
         android:id="@+id/song"
@@ -74,11 +57,10 @@
         android:text="Song Name"
         android:layout_marginStart="15dp"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/MuteToggleButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="60dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginBottom="230dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/album"
@@ -90,66 +72,49 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/artist"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageButton
         android:id="@+id/PlayButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_media_play"
+        android:layout_marginStart="16dp"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/AlarmButton"
-        app:layout_constraintRight_toRightOf="@+id/MuteToggleButton"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/MuteToggleButton"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/MuteToggleButton"
-        app:layout_constraintTop_toTopOf="@+id/AlarmButton" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <SeekBar
         android:id="@+id/VolumeBar"
         android:layout_width="0dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="10dp"
+        android:layout_height="22dp"
+        android:layout_marginEnd="6dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/NewsButton"
-        android:layout_marginEnd="6dp"
         app:layout_constraintRight_toRightOf="@+id/NewsButton"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="74dp"
         app:layout_constraintTop_toBottomOf="@+id/song"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="75dp"
-        app:layout_constraintLeft_toRightOf="@+id/MuteToggleButton"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="6dp" />
-
-    <ImageButton
-        android:id="@+id/MuteToggleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
-        android:layout_marginStart="16dp"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/PlayButton"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="9dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintLeft_toRightOf="@+id/MuteToggleButton" />
 
     <ImageButton
         android:id="@+id/PauseButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         app:srcCompat="@android:drawable/ic_media_pause"
+        app:layout_constraintRight_toLeftOf="@+id/VolumeBar"
         tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/MuteToggleButton"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/PlayButton"
-        app:layout_constraintLeft_toRightOf="@+id/PlayButton"
-        android:layout_marginLeft="15dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/VolumeBar" />
 
     <ImageButton
         android:id="@+id/NewsButton"
@@ -157,12 +122,12 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_dvr_white"
         android:layout_marginEnd="16dp"
+        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/PauseButton"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="59dp"
-        android:layout_marginRight="16dp" />
+        app:layout_constraintTop_toTopOf="@+id/PauseButton" />
 
     <ImageButton
         android:id="@+id/AlarmButton"
@@ -173,7 +138,20 @@
         app:layout_constraintRight_toLeftOf="@+id/NewsButton"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/NewsButton"
-        android:layout_marginRight="13dp" />
+        app:layout_constraintTop_toTopOf="@+id/NewsButton" />
+
+    <ToggleButton
+        android:id="@+id/MuteToggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ToggleButton"
+        android:textOff="Mute"
+        android:textOn="Unmute"
+        android:layout_marginStart="16dp"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/album"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
